# napari-slice-anything

./: .gitignore  LICENSE  README.md  pyproject.toml
src/napari_slice_anything/: __init__.py  _widget.py  napari.yaml
src/napari_slice_anything/widgets/: __init__.py  button_controls.py  crop_handler.py  dimension_controls.py  layer_selector.py
